[gd_scene load_steps=4 format=3 uid="uid://cnxjefcq6ft5m"]

[ext_resource type="Script" path="res://src/Utility/Wind.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://sq0rxnbltiyq" path="res://assets/SFX/WindStereo.ogg" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(240, 136)

[node name="Wind" type="Area2D"]
z_index = -10
collision_layer = 0
collision_mask = 71
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color(0.513726, 1, 0.682353, 0.172549)
position = Vector2(240, 136)
shape = SubResource("1")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="WindSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 272.0
color = Color(0.647059, 1, 0.94902, 0.14902)

[connection signal="body_entered" from="." to="." method="_on_Wind_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Wind_body_exited"]
